# qsc-key-rfc

./: Makefile  README.md  RFC Proposal  draft-ietf-cfrg-qsckeys.html  draft-ietf-cfrg-qsckeys.txt  draft-ietf-cfrg-qsckeys.xml  draft-ietf-qsc-keys.txt  draft-uni-qsckeys-01.xml  draft-uni-qsckeys-dilithium-00.html  draft-uni-qsckeys-dilithium-00.txt  draft-uni-qsckeys-dilithium-00.xml  draft-uni-qsckeys-dilithium-01.html  draft-uni-qsckeys-dilithium-01.txt  draft-uni-qsckeys-dilithium-01.xml  draft-uni-qsckeys-falcon-00.html  draft-uni-qsckeys-falcon-00.txt  draft-uni-qsckeys-falcon-00.xml  draft-uni-qsckeys-falcon-01.html  draft-uni-qsckeys-falcon-01.txt  draft-uni-qsckeys-falcon-01.xml  draft-uni-qsckeys-kyber-00.html  draft-uni-qsckeys-kyber-00.txt  draft-uni-qsckeys-kyber-00.xml  draft-uni-qsckeys-kyber-01.html  draft-uni-qsckeys-kyber-01.txt  draft-uni-qsckeys-kyber.html  draft-uni-qsckeys-kyber.txt  draft-uni-qsckeys-kyber.xml  draft-uni-qsckeys-sphincsplus-00.html  draft-uni-qsckeys-sphincsplus-00.txt  draft-uni-qsckeys-sphincsplus-00.xml  draft-uni-qsckeys-sphincsplus-01.html  draft-uni-qsckeys-sphincsplus-01.txt  draft-uni-qsckeys-sphincsplus-01.xml  draft-uni-qsckeys.html  draft-uni-qsckeys.txt  draft-uni-qsckeys.xml  working.xml
.github/workflows/: makefile.yml
ntru-prime-reference-material/: ntruprime.sage
presentations/: IETF 114. LAMPS QSC Keys.pptx  IETF_lamps.pptx  IETF_lamps_presentation.pptx
qsc-key-encoder/: CMakeLists.txt  README.md
qsc-key-encoder/KAT/Dilithium2/: PQCsignKAT_2528_ck_full.rsp  PQCsignKAT_2528_ck_full.shake256  PQCsignKAT_2528_ck_kg.rsp  PQCsignKAT_2528_ck_kg.shake256
qsc-key-encoder/KAT/Dilithium2_AES/: PQCsignKAT_2528.req
qsc-key-encoder/KAT/Dilithium3/: PQCsignKAT_4000_ck_full.rsp  PQCsignKAT_4000_ck_full.shake256  PQCsignKAT_4000_ck_kg.rsp  PQCsignKAT_4000_ck_kg.shake256
qsc-key-encoder/KAT/Dilithium5/: PQCsignKAT_4864_ck_full.rsp  PQCsignKAT_4864_ck_full.shake256  PQCsignKAT_4864_ck_kg.rsp  PQCsignKAT_4864_ck_kg.shake256
qsc-key-encoder/include/: qsc_encoding.h
qsc-key-encoder/src/: encoding_asn1.c  encoding_dilithium.c  encoding_falcon.c  encoding_kyber.c  encoding_qsc.c  encoding_sphincsplus.c  encodings.h
qsc-key-encoder/test/: CMakeLists.txt  test.c  test_kat_endec.c
