add_executable(qsc_key_encoder_test test.c test_kat_endec.c)

target_link_libraries(qsc_key_encoder_test qsc_key_encoder)

# P8 and SPKI encodings
add_test(Dilithium2_draft-uni-qsckeys-dilithium-00 qsc_key_encoder_test Dilithium2 draft-uni-qsckeys-dilithium-00/p8-spki)
add_test(Dilithium3_draft-uni-qsckeys-dilithium-00 qsc_key_encoder_test Dilithium3 draft-uni-qsckeys-dilithium-00/p8-spki)
add_test(Dilithium5_draft-uni-qsckeys-dilithium-00 qsc_key_encoder_test Dilithium5 draft-uni-qsckeys-dilithium-00/p8-spki)

add_test(Dilithium2_aes_draft-uni-qsckeys-dilithium-00 qsc_key_encoder_test Dilithium2_AES draft-uni-qsckeys-dilithium-00/p8-spki)
add_test(Dilithium3_aes_draft-uni-qsckeys-dilithium-00 qsc_key_encoder_test Dilithium3_AES draft-uni-qsckeys-dilithium-00/p8-spki)
add_test(Dilithium5_aes_draft-uni-qsckeys-dilithium-00 qsc_key_encoder_test Dilithium5_AES draft-uni-qsckeys-dilithium-00/p8-spki)

add_test(Kyber512_draft-uni-qsckeys-kyber-00 qsc_key_encoder_test kyber512 draft-uni-qsckeys-kyber-00/p8-spki)
add_test(Kyber768_draft-uni-qsckeys-kyber-00 qsc_key_encoder_test kyber768 draft-uni-qsckeys-kyber-00/p8-spki)
add_test(Kyber1024_draft-uni-qsckeys-kyber-00 qsc_key_encoder_test kyber1024 draft-uni-qsckeys-kyber-00/p8-spki)

add_test(Falcon512_draft-uni-qsckeys-falcon-00 qsc_key_encoder_test Falcon512 draft-uni-qsckeys-falcon-00/p8-spki)
add_test(Falcon1024_draft-uni-qsckeys-falcon-00 qsc_key_encoder_test Falcon1024 draft-uni-qsckeys-falcon-00/p8-spki)

add_test(sphincsplus-sha256-128f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-128f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-128f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-128f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-128s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-128s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-128s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-128s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-192f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-192f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-192f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-192f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-192s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-192s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-192s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-192s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-256f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-256f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-256f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-256f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-256s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-256s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-sha256-256s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-sha256-256s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)

add_test(sphincsplus-shake-128f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-128f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-128f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-128f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-128s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-128s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-128s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-128s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-192f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-192f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-192f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-192f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-192s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-192s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-192s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-192s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-256f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-256f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-256f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-256f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-256s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-256s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-shake-256s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-shake256-256s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)

add_test(sphincsplus-haraka-128f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-128f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-128f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-128f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-128s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-128s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-128s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-128s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-192f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-192f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-192f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-192f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-192s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-192s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-192s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-192s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-256f-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-256f-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-256f-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-256f-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-256s-robust_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-256s-robust draft-uni-qsckeys-sphincsplus-00/p8-spki)
add_test(sphincsplus-haraka-256s-simple_draft-uni-qsckeys-sphincs-00 qsc_key_encoder_test sphincs-haraka-256s-simple draft-uni-qsckeys-sphincsplus-00/p8-spki)

# PrivateKey and SubjectPublicKey encodings
add_test(Dilithium2_draft-uni-qsckeys-dilithium-00/sk-pk qsc_key_encoder_test Dilithium2 draft-uni-qsckeys-dilithium-00/sk-pk)
add_test(Dilithium3_draft-uni-qsckeys-dilithium-00/sk-pk qsc_key_encoder_test Dilithium3 draft-uni-qsckeys-dilithium-00/sk-pk)
add_test(Dilithium5_draft-uni-qsckeys-dilithium-00/sk-pk qsc_key_encoder_test Dilithium5 draft-uni-qsckeys-dilithium-00/sk-pk)

add_test(Dilithium2_aes_draft-uni-qsckeys-dilithium-00/sk-pk qsc_key_encoder_test Dilithium2_AES draft-uni-qsckeys-dilithium-00/sk-pk)
add_test(Dilithium3_aes_draft-uni-qsckeys-dilithium-00/sk-pk qsc_key_encoder_test Dilithium3_AES draft-uni-qsckeys-dilithium-00/sk-pk)
add_test(Dilithium5_aes_draft-uni-qsckeys-dilithium-00/sk-pk qsc_key_encoder_test Dilithium5_AES draft-uni-qsckeys-dilithium-00/sk-pk)

add_test(Kyber512_draft-uni-qsckeys-kyber-00/sk-pk qsc_key_encoder_test kyber512 draft-uni-qsckeys-kyber-00/sk-pk)
add_test(Kyber768_draft-uni-qsckeys-kyber-00/sk-pk qsc_key_encoder_test kyber768 draft-uni-qsckeys-kyber-00/sk-pk)
add_test(Kyber1024_draft-uni-qsckeys-kyber-00/sk-pk qsc_key_encoder_test kyber1024 draft-uni-qsckeys-kyber-00/sk-pk)

add_test(Falcon512_draft-uni-qsckeys-falcon-00/sk-pk qsc_key_encoder_test Falcon512 draft-uni-qsckeys-falcon-00/sk-pk)
add_test(Falcon1024_draft-uni-qsckeys-falcon-00/sk-pk qsc_key_encoder_test Falcon1024 draft-uni-qsckeys-falcon-00/sk-pk)

add_test(sphincsplus-sha256-128f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-128f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-128f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-128f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-128s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-128s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-128s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-128s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-192f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-192f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-192f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-192f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-192s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-192s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-192s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-192s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-256f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-256f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-256f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-256f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-256s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-256s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-sha256-256s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-sha256-256s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)

add_test(sphincsplus-shake-128f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-128f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-128f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-128f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-128s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-128s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-128s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-128s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-192f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-192f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-192f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-192f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-192s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-192s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-192s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-192s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-256f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-256f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-256f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-256f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-256s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-256s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-shake-256s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-shake256-256s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)

add_test(sphincsplus-haraka-128f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-128f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-128f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-128f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-128s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-128s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-128s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-128s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-192f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-192f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-192f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-192f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-192s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-192s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-192s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-192s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-256f-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-256f-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-256f-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-256f-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-256s-robust_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-256s-robust draft-uni-qsckeys-sphincsplus-00/sk-pk)
add_test(sphincsplus-haraka-256s-simple_draft-uni-qsckeys-sphincs-00/sk-pk qsc_key_encoder_test sphincs-haraka-256s-simple draft-uni-qsckeys-sphincsplus-00/sk-pk)